[gd_scene load_steps=6 format=3 uid="uid://d07k1hv4xq55v"]

[ext_resource type="Script" uid="uid://n6rl554xuulr" path="res://play_ground/enemy_test_unit/enemiunit.gd" id="1_ye3ys"]
[ext_resource type="Texture2D" uid="uid://di13sy74u5ew6" path="res://play_ground/assets dump/Crate.png" id="2_ye3ys"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xo4oq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jwa15"]
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nu4ju"]
radius = 60.0

[node name="enemy_unit0" type="CharacterBody2D" groups=["faction_enemy"]]
script = ExtResource("1_ye3ys")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ye3ys")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xo4oq")

[node name="areamov" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="areamov"]
shape = SubResource("CircleShape2D_jwa15")
debug_color = Color(1, 1, 1, 0.27451)

[node name="areaDisparo" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaDisparo"]
shape = SubResource("CircleShape2D_nu4ju")

[connection signal="mouse_entered" from="areamov" to="." method="_on_areamov_mouse_entered"]
[connection signal="mouse_exited" from="areamov" to="." method="_on_areamov_mouse_exited"]
[connection signal="mouse_entered" from="areaDisparo" to="." method="_on_area_disparo_mouse_entered"]
[connection signal="mouse_exited" from="areaDisparo" to="." method="_on_area_disparo_mouse_exited"]
